# loxone-mcp

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  security.yml
config/: example-config.yaml
docker/: Dockerfile  docker-compose.yml  docker-compose.yml.example
docs/: CHANGES-SUMMARY.md  analysis-top50-usecases.md  pipeline-action-plan.md  pipeline-comparison.md
docs/api/: mcp-resources.md  mcp-tools.md
specs/001-loxone-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-loxone-mcp-server/checklists/: requirements.md
specs/001-loxone-mcp-server/contracts/: audit-log.md  loxone-api.md  mcp-tools.md
src/loxone_mcp/: __init__.py  __main__.py  config.py  loxone-mcp.code-workspace  server.py
src/loxone_mcp/audit/: __init__.py  logger.py
src/loxone_mcp/loxone/: __init__.py  auth.py  client.py  models.py  structure.py  websocket.py
src/loxone_mcp/mcp/: __init__.py  models.py  notifications.py  resources.py  tools.py
src/loxone_mcp/metrics/: __init__.py  collector.py
src/loxone_mcp/state/: __init__.py  cache.py  manager.py
src/loxone_mcp/transport/: __init__.py  http_sse.py  stdio.py  streamable_http.py
src/tests/: README.md  conftest.py
src/tests/contract/: test_mcp_protocol.py
src/tests/fixtures/: loxone_responses.py  loxone_structure_file.json
src/tests/integration/: test_us3_remote_access.py  test_us6_local_mode.py  test_usecase_scenarios.py
src/tests/unit/: test_auth.py  test_cache.py  test_client.py  test_config.py  test_mcp_models.py  test_new_tools.py  test_notifications.py  test_server.py  test_stdio.py  test_streamable_http.py  test_structure.py  test_transport.py  test_us1_query_states.py  test_us2_control_components.py  test_us4_metrics.py  test_us5_audit.py  test_wave_tools.py  test_websocket.py
